src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.stderr
error[E0759]: `x` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/project-fn-ret-invariant.rs:49:9
   |
LL | fn baz<'a, 'b>(x: Type<'a>) -> Type<'static> {
   |                   -------- this data with lifetime `'a`...
...
LL |     bar(foo, x)
   |     ----^^^---- ...is captured and required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
